WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141910
Occasional crash in MediaPlayer::setPrivateBrowsingMode
https://bugs.webkit.org/show_bug.cgi?id=141910
Summary
Occasional crash in MediaPlayer::setPrivateBrowsingMode
Eric Carlson
Reported
2015-02-23 09:16:08 PST
The iOS bots occasionally crash in MediaPlayer::setPrivateBrowsingMode: WebCore::MediaPlayer::setPrivateBrowsingMode(bool) + 4 WebCore::HTMLMediaElement::loadResource(WebCore::URL const&, WebCore::ContentType&, WTF::String const&) + 1160 WebCore::HTMLMediaElement::selectMediaResource() + 802 WebCore::HTMLMediaElement::loadTimerFired() + 77
Attachments
Proposed patch
(1.66 KB, patch)
2015-02-23 09:19 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2015-02-23 09:19:22 PST
Created
attachment 247123
[details]
Proposed patch
Jer Noble
Comment 2
2015-02-23 11:13:16 PST
Comment on
attachment 247123
[details]
Proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=247123&action=review
> Source/WebCore/html/HTMLMediaElement.cpp:4743 > + clearMediaPlayer(-1);
😱 Could we add an entry to DelayedActionType called "AllActions" or something?
Eric Carlson
Comment 3
2015-02-23 11:28:36 PST
Committed
r180510
:
https://trac.webkit.org/r180510
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug