Occasional crash in MediaPlayer::setPrivateBrowsingMode https://bugs.webkit.org/show_bug.cgi?id=141910

Reviewed by Jer Noble.

No new tests, I was unable to reproduce the crash.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::stopPeriodicTimers): Use EveryDelayedAction instead of -1.
(WebCore::HTMLMediaElement::stop): Call clearMediaPlayer instead of just setting m_player
    to NULL.
* html/HTMLMediaElement.h: Define EveryDelayedAction.


Canonical link: https://commits.webkit.org/159933@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180510 268f45cc-cd09-0410-ab3c-d52691b4dbfc